--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
+    "diamante-sdk-js": "^1.0.3",
     "express": "^4.18.2",
     "luxon": "^3.4.3",
     "moralis": "^2.23.1",
